add data update to keycloak