@@ -5,6 +5,8 @@ import com.modsen.account.client.KeycloakClient;
 import com.modsen.account.client.PassengerServiceClient;
 import com.modsen.account.dto.AuthenticateRequest;
 import com.modsen.account.dto.RegistrationRequest;
+import com.modsen.account.dto.UpdateUserRequest;
+import com.modsen.account.dto.UpdateUserResponse;
 import com.modsen.account.dto.UserResponse;
 import com.modsen.account.mapper.RequestMapper;
 import com.modsen.account.mapper.ResponseMapper;
@@ -18,7 +20,6 @@ import jakarta.ws.rs.core.Response;
 import lombok.RequiredArgsConstructor;
 import org.keycloak.OAuth2Constants;
 import org.keycloak.admin.client.Keycloak;
-import org.keycloak.admin.client.resource.RealmResource;
 import org.keycloak.admin.client.resource.UserResource;
 import org.keycloak.admin.client.resource.UsersResource;
 import org.keycloak.representations.idm.CredentialRepresentation;
@@ -28,9 +29,9 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.UUID;
 
 @Service
@@ -50,21 +51,22 @@ public class KeycloakServiceImpl implements KeycloakService {
 
     @Value("${spring.security.oauth2.client.registration.keycloak.client-id}")
     private String clientId;
+
     @Value("${spring.security.oauth2.client.registration.keycloak.client-secret}")
     private String clientSecret;
+
     @Value("${keycloak.auth-server-url}")
     private String serverUrl;
 
     @Override
     public Map<String, Object> login(AuthenticateRequest request) {
-        Map<String, String> data = new HashMap<>();
-        data.put(KeycloakParameters.CLIENT_ID, clientId);
-        data.put(KeycloakParameters.CLIENT_SECRET, clientSecret);
-        data.put(KeycloakParameters.GRANT_TYPE, OAuth2Constants.PASSWORD);
-        data.put(KeycloakParameters.USERNAME, request.username());
-        data.put(KeycloakParameters.PASSWORD, request.password());
-
-        return keycloakClient.getToken(data);
+        return keycloakClient.getToken(Map.of(
+                KeycloakParameters.CLIENT_ID, clientId,
+                KeycloakParameters.CLIENT_SECRET, clientSecret,
+                KeycloakParameters.GRANT_TYPE, OAuth2Constants.PASSWORD,
+                KeycloakParameters.USERNAME, request.username(),
+                KeycloakParameters.PASSWORD, request.password()
+        ));
     }
 
     @Override
@@ -73,24 +75,13 @@ public class KeycloakServiceImpl implements KeycloakService {
         UsersResource usersResource = getUsersResource();
 
         Response response = usersResource.create(user);
-
         KeycloakResponseValidator.validateCreateUserResponse(response);
 
-        String locationHeader = response.getHeaderString("Location");
-        String userId = locationHeader.substring(locationHeader.lastIndexOf("/") + 1);
-
+        String userId = extractUserIdFromResponse(response);
         addRealmRoleToUser(userId, registrationRequest.role().toString());
 
         try {
-            if (registrationRequest.role() == Roles.DRIVER) {
-                driverServiceClient.createDriver(
-                        requestMapper.registrationRequestToCreateDriverRequest(registrationRequest, UUID.fromString(userId))
-                );
-            } else {
-                passengerServiceClient.createPassenger(
-                        requestMapper.registrationRequestToCreatePassengerRequest(registrationRequest, UUID.fromString(userId))
-                );
-            }
+            createUserInService(userId, registrationRequest);
         } catch (Exception ex) {
             hardDelete(userId);
             throw new CreateUserException(ExceptionMessages.CREATE_USER_ERROR.format(), ex);
@@ -102,29 +93,29 @@ public class KeycloakServiceImpl implements KeycloakService {
     @Override
     public void deleteUser(UUID userId) throws Exception {
         jwtTokenUtil.validateAccess(userId);
+        UserResource userResource = getUserResource(userId);
 
-        UsersResource usersResource = getUsersResource();
-        UserResource userResource = usersResource.get(String.valueOf(userId));
-
-        List<String> realmRoles = userResource
-                .roles()
-                .realmLevel()
-                .listEffective()
-                .stream()
-                .map(RoleRepresentation::getName)
-                .toList();
+        List<String> roles = getUserRoles(userResource);
         try {
-            if (realmRoles.contains(String.valueOf(Roles.DRIVER))) {
-                driverServiceClient.deleteDriver(userId);
-            } else if (realmRoles.contains(String.valueOf(Roles.PASSENGER))) {
-                passengerServiceClient.deletePassenger(userId);
-            }
-
+            deleteUserFromService(userId, roles);
         } catch (Exception ex) {
             throw new RuntimeException(ExceptionMessages.DELETE_USER_ERROR.format(), ex);
         }
 
         disableUser(userResource);
+    }
+
+    @Override
+    public UpdateUserResponse updateUser(UUID userId, UpdateUserRequest updateUserRequest) {
+        jwtTokenUtil.validateAccess(userId);
+        UserResource userResource = getUserResource(userId);
+
+        updateUserRepresentation(userResource, updateUserRequest);
+
+        List<String> roles = getUserRoles(userResource);
+        updateUserInService(userId, updateUserRequest, roles);
+
+        return responseMapper.toUpdateUserResponse(userId, updateUserRequest);
     }
 
     private void disableUser(UserResource userResource) {
@@ -141,14 +132,23 @@ public class KeycloakServiceImpl implements KeycloakService {
         user.setLastName(registrationRequest.lastName());
         user.setEmailVerified(false);
 
-        Map<String, List<String>> attributes = new HashMap<>();
-        attributes.put("phone_number", Collections.singletonList(registrationRequest.phoneNumber()));
-        user.setAttributes(attributes);
-
-        CredentialRepresentation credentialRepresentation = createPasswordCredentials(registrationRequest.password());
-        user.setCredentials(Collections.singletonList(credentialRepresentation));
+        user.setAttributes(Map.of("phone_number", List.of(registrationRequest.phoneNumber())));
+        user.setCredentials(List.of(createPasswordCredentials(registrationRequest.password())));
 
         return user;
+    }
+
+    private void updateUserRepresentation(UserResource userResource, UpdateUserRequest updateUserRequest) {
+        UserRepresentation user = userResource.toRepresentation();
+        user.setUsername(updateUserRequest.email());
+        user.setEmail(updateUserRequest.email());
+        user.setFirstName(updateUserRequest.firstName());
+        user.setLastName(updateUserRequest.lastName());
+
+        Optional.ofNullable(updateUserRequest.phoneNumber())
+                .ifPresent(phone -> user.getAttributes().put("phone_number", List.of(phone)));
+
+        userResource.update(user);
     }
 
     private CredentialRepresentation createPasswordCredentials(String password) {
@@ -160,31 +160,63 @@ public class KeycloakServiceImpl implements KeycloakService {
     }
 
     private void addRealmRoleToUser(String userId, String roleName) {
-        RealmResource realmResource = keycloak.realm(realm);
-
-        RoleRepresentation role = realmResource
-                .roles()
-                .get(roleName)
-                .toRepresentation();
-
+        RoleRepresentation role = keycloak.realm(realm).roles().get(roleName).toRepresentation();
         if (role == null) {
             throw new IllegalArgumentException(ExceptionMessages.ROLE_DOES_NOT_EXIST.format(roleName));
         }
 
-        UserResource userResource = realmResource.users().get(userId);
-        userResource
-                .roles()
-                .realmLevel()
-                .add(Collections.singletonList(role));
+        getUserResource(userId).roles().realmLevel().add(Collections.singletonList(role));
+    }
+
+    private void createUserInService(String userId, RegistrationRequest registrationRequest) {
+        UUID uuid = UUID.fromString(userId);
+        if (registrationRequest.role() == Roles.DRIVER) {
+            driverServiceClient.createDriver(requestMapper.registrationRequestToCreateDriverRequest(registrationRequest, uuid));
+        } else {
+            passengerServiceClient.createPassenger(requestMapper.registrationRequestToCreatePassengerRequest(registrationRequest, uuid));
+        }
+    }
+
+    private void deleteUserFromService(UUID userId, List<String> roles) {
+        if (roles.contains(String.valueOf(Roles.DRIVER))) {
+            driverServiceClient.deleteDriver(userId);
+        } else if (roles.contains(String.valueOf(Roles.PASSENGER))) {
+            passengerServiceClient.deletePassenger(userId);
+        }
+    }
+
+    private void updateUserInService(UUID userId, UpdateUserRequest updateUserRequest, List<String> roles) {
+        if (roles.contains(String.valueOf(Roles.DRIVER))) {
+            driverServiceClient.updateDriver(userId, requestMapper.updateUserRequestToUpdateDriverRequest(updateUserRequest));
+        } else if (roles.contains(String.valueOf(Roles.PASSENGER))) {
+            passengerServiceClient.updatePassenger(userId, requestMapper.updateUserRequestToUpdatePassengerRequest(updateUserRequest));
+        }
+    }
+
+    private String extractUserIdFromResponse(Response response) {
+        String locationHeader = response.getHeaderString("Location");
+        return locationHeader.substring(locationHeader.lastIndexOf("/") + 1);
+    }
+
+    private List<String> getUserRoles(UserResource userResource) {
+        return userResource.roles().realmLevel().listEffective()
+                .stream().map(RoleRepresentation::getName).toList();
     }
 
     private void hardDelete(String userId) {
-        UsersResource usersResource = getUsersResource();
-        usersResource.get(userId).remove();
+        getUsersResource().get(userId).remove();
     }
 
     private UsersResource getUsersResource() {
         return keycloak.realm(realm).users();
+    }
+
+    private UserResource getUserResource(UUID userId) {
+        return getUsersResource().get(userId.toString());
+    }
+
+    private UserResource getUserResource(String userId) {
+        return getUsersResource().get(userId);
     }
 
 }
